# bits-mlops

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deployment/k8s/: README.md  deployment.yaml  ingress.yaml  namespace.yaml  prometheus-service-monitor.yaml  service.yaml
models/: heart_disease_model.joblib  model_metadata.json
reports/: MLOps_Assignment_Report.docx  REPORT.md  metrics.json
reports/screenshots/: README.md
sample_input/: patient_high_risk.json  patient_low_risk.json
scripts/: download_data.py  generate_report.py  run_eda.py
src/heart_disease_mlops/: __init__.py  api.py  config.py  data.py  features.py  modeling.py  train.py
tests/: conftest.py  test_api.py  test_data.py  test_features.py  test_modeling.py
