[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bits-mlops-heart-disease"
version = "0.1.0"
description = "End-to-end MLOps assignment for heart disease risk prediction."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "BITS MLOps Student" }]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]
